--- a/simple-todos.html
+++ b/simple-todos.html
@@ -6,11 +6,19 @@
   <div class="container">
 	<header>
 	  <h1>Todo List</h1>
-
+	
+		<label class="hide-completed">
+		  <input type="checkbox" checked="{{hideCompleted}}" />
+		  Hide Completed Tasks
+		</label>
+	
+		{{> loginButtons}}
+		{{#if currentUser}}
+		  <form class="new-task">
+		    <input type="text" name="text" placeholder="Type to add new tasks" />
+		  </form>
+		{{/if}}
 	  <!-- add a form below the h1 -->
-	  <form class="new-task">
-	    <input type="text" name="text" placeholder="Type to add new tasks" />
-	  </form>
 	</header>
 
     <ul>
@@ -22,11 +30,21 @@
 </body>
 
 <template name="task">
-  <li class="{{#if checked}}checked{{/if}}">
+<li class="{{#if checked}}checked{{/if}} {{#if private}}private{{/if}}">
     <button class="delete">&times;</button>
 
     <input type="checkbox" checked="{{checked}}" class="toggle-checked" />
 
-    <span class="text">{{text}}</span>
+    {{#if isOwner}}
+	  <button class="toggle-private">
+	    {{#if private}}
+	      Private
+	    {{else}}
+	      Public
+	    {{/if}}
+	  </button>
+	{{/if}}
+
+    <span class="text"><strong>{{username}}</strong> - {{text}}</span>
   </li>
 </template>
